--- a/index.html
+++ b/index.html
@@ -40,16 +40,27 @@
             <button id="sub-button">Subtract</button>
             <span id="sub-result"></span>
         </section>
-        <section class="main-section" id="mul-calc">
+        <section class="main-section" id="mult-calc">
             <h2>
-               This is a subtraction calculator
+               This is a multiplication calculator
             </h2>
 
-            <input id="mul-one" type="number" />
+            <input id="mult-one" type="number" />
             *
-            <input id="mul-two" type="number" />
-            <button id="mul-button">Multiply</button>
-            <span id="mul-result"></span>
+            <input id="mult-two" type="number" />
+            <button id="mult-button">Multiply</button>
+            <span id="mult-result"></span>
+        </section>
+        <section class="main-section" id="div-calc">
+            <h2>
+               This is a division calculator
+            </h2>
+
+            <input id="div-one" type="number" />
+            /
+            <input id="div-two" type="number" />
+            <button id="div-button">Divide</button>
+            <span id="div-result"></span>
         </section>
     </main>
     <footer>
