refactor and testing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="app.js"></script>
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 
 <body>
@@ -63,6 +63,21 @@
             <span id="div-result"></span>
         </section>
     </main>
+    <div class="all-in-one">
+        <h2>
+            This is an all-in-one calculator
+         </h2>
+
+         <input id="input-one" type="number" />
+         <div class="op-keys" id="operand">
+            <button id="all-add">+</button>
+            <button id="all-sub">-</button>
+            <button id="all-mult">*</button>
+            <button id="all-div">/</button>
+        </div>
+         <input id="input-two" type="number" />
+         <span id="equal-result"></span>
+    </div>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
