new buttons, working test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input id="add-one" type="number" />
             +
             <input id="add-two" type="number" />
-            <button id="sum-button">Add</button>
+            <button id="sum-button"><span>Add</span></button>
             <span id="sum-result"></span>
         </section>
         <section class="main-section" id="sub-calc">
@@ -37,7 +37,7 @@
             <input id="sub-one" type="number" />
             -
             <input id="sub-two" type="number" />
-            <button id="sub-button">Subtract</button>
+            <button id="sub-button"><span>Subtract</span></button>
             <span id="sub-result"></span>
         </section>
         <section class="main-section" id="mult-calc">
@@ -48,7 +48,7 @@
             <input id="mult-one" type="number" />
             *
             <input id="mult-two" type="number" />
-            <button id="mult-button">Multiply</button>
+            <button id="mult-button"><span>Multiply</span></button>
             <span id="mult-result"></span>
         </section>
         <section class="main-section" id="div-calc">
@@ -59,10 +59,11 @@
             <input id="div-one" type="number" />
             /
             <input id="div-two" type="number" />
-            <button id="div-button">Divide</button>
+            <button id="div-button"><span>Divide</span></button>
             <span id="div-result"></span>
         </section>
     </main>
+    <!-- 
     <div class="all-in-one">
         <h2>
             This is an all-in-one calculator
@@ -81,7 +82,7 @@
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
-
+    -->
 </body>
 
 </html>
